app/assets/stylesheets/application.scss
//NOTE: use Rails asset pipeline for development to prevent bootstrap from being recompiled each time.
// require bootstrap-loader
@import 'black-tie/black-tie';
@import 'variables';
@import 'bootstrap';
@import 'mixins';
@import 'static_elements/static';
@import 'home/home';
@import 'pages/pages';

// Global Styling

html {
  position: relative;
  overflow-x: hidden;
  background: #262c33 url("/images/background/background_main.jpg") no-repeat center center fixed;
  background-size: cover;
  @include media-breakpoint-up(xs) {
    font-size: $font-size-xs;
  }
  @include media-breakpoint-up(sm) {
    font-size: $font-size-sm;
  }
  @include media-breakpoint-up(lg) {
    font-size: $font-size-lg;
  }
}

@-moz-document url-prefix() {
  html {
    background: #262c33 url("/images/background/background_main.jpg") repeat center center;
    background-size: auto;
  }
}

body {
  font-weight: 300;
  font-family: $font-primary;
  position: relative;
  font-size: inherit !important;
  padding-top: $navbar-height + 1rem;
  background: transparent;
  @include media-breakpoint-down(sm) {
    background-size: 100%;
  }
}
.container-main {
  @extend .container;
}
#main-block {
  position: relative;
  @extend .container-main;
  padding: 0;
}
h1, h2 {
  margin: 0;
}
h1 {
  color: #877674;
  letter-spacing: 1px;
  text-transform: uppercase;
  font-family: $font-secondary;
}
ul {
  list-style: none;
}
a {
  letter-spacing: 1px;
}
p {
  letter-spacing: 1px;
}
em {
  font-size: 0.8em;
}
.btn {
  font-size: 0.8rem;
  letter-spacing: 1px;
  text-transform: capitalize;
}
.shadow {
  background-color: $transparent-brand-primary;
  border: 0;
}
.card-title-small {
  color: #877674;
  margin: 0;
  font-family: $font-secondary;
  text-transform: uppercase;
  text-align: center;
  font-weight: 300;
  letter-spacing: 2px;
}
.inner-block {
  padding: 0;
}
.bg-transparent {
  background-color: transparent;
}

.hidden {
  opacity: 0;
}
.block {
  @extend .card;
  @extend .card-block;
  @extend .shadow;
}
.page-title {
  margin-bottom: 1rem;
}

.map-block {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-around;
  align-items: center;
  overflow-x: hidden;
  @include media-breakpoint-up(md) {
    flex-flow: row wrap;
    align-items: center;
    justify-content: center;
  }
  @include media-breakpoint-up(lg) {
    flex-flow: row nowrap;
  }
}
.map-link {
  background-color: $color-four;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  color: transparentize(#111, 0.15);
  height: 2.5rem;
  margin-bottom: 1.25rem;
  &:hover {
    background-color: darken($color-four, 2%);
    color: #1a1a1a;
  }
  @include media-breakpoint-up(md) {
    margin-bottom: 0;
    margin-right: 1rem;
  }
  @include media-breakpoint-up(lg) {
    height: 3rem;
    margin-right: 1rem;
  }
  i {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: center;
    height: 2.5rem;
    width: 2.5rem;
    border: solid 1px transparentize(#111, 0.05);
    font-size: 1.25rem;
    @include media-breakpoint-up(md) {
      margin: 0;
    }
    @include media-breakpoint-up(lg) {
      font-size: 1.5rem;
      width: 3rem;
      height: 3rem;
    }
  }
}
.map-link-text {
  letter-spacing: 1px;
  font-weight: 300;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  height: 2.5rem;
  box-sizing: border-box;
  border: solid 1px transparentize(#111, 0.05);
  border-left: none;
  padding: 0 1rem;
  text-transform: uppercase;
  font-family: $font-secondary;
  font-size: 1rem;
  @include media-breakpoint-up(lg) {
    height: 3rem;
    font-size: 1.1rem;
  }
}
.map-desc {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-around;
  font-family: $font-secondary;
  color: $color-three;
  font-size: 1rem;
  letter-spacing: 1px;
  text-transform: uppercase;
  text-align: center;
  height: 3.5rem;
  border-right: solid 1px $color-one;
  padding: 0.5rem 1rem;
  border-left: solid 1px $color-one;
  flex-grow: 2;
  @include media-breakpoint-up(md) {
    height: 2.25rem;
    padding: 0;
  }
  @include media-breakpoint-up(lg) {
    height: 2.75rem;
    padding: 0 1rem;
    font-size: 1.15rem;
  }
}

.card-text {
  font-weight: 300;
  color: $color-two;
}

.food-truck-img {
  max-height: 400px;
  overflow-x: hidden;
  margin-bottom: $grid-gutter-width;
  img {
    border: solid 1px #000;
  }
}
.flex-row {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  margin: 0 -2rem;
}
.img-block {
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 0.25rem;
  height: 100%;
  width: 100%;
  @include media-breakpoint-up(md) {
    padding: 0.5rem;
  }
}

.food-truck-images {
  margin: 0 -0.5rem;
  padding: 0rem;
  @include media-breakpoint-up(md) {
    margin: 0;
    padding: 1.25rem;
  }
}

.food-truck-wrap {
  padding: 0.25rem;
  background: transparent;
  height: 100%;
  @include media-breakpoint-up(md) {
    padding: 0.5rem;
  }
}

.small-col {
  float: left;
  position: relative;
  width: 40%;
  background: transparent;
  .small {
    width: 100%;
    padding-bottom: 100%;
  }
}

.large-col {
  float: left;
  position: relative;
  width: 60%;
  background: transparent;
  .large {
    width: 100%;
    padding-bottom: 66.667%;
  }
}

.blockquote {
  border-width: 2px;
}

.blockquote-copy-text {
  @extend .blockquote;
  margin-left: 0.5rem;
  border-color: darken(#877674, 30%);
}

